Changes to deadlines, addition of announcement 1, changes to info for mock trial and to schedule and list of readings.

--- a/Information for Mock Trial Participants.Rmd
+++ b/Information for Mock Trial Participants.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Information for Participants in Mock Trial of Hugo Chávez"
-output: html_document
+output: pdf_document
 ---
 
 There will be two teams, one for the defence and one for the prosecution. The entire trial will take place on Tuesday 31 March. Aside from a few minutes at the beginning (which I will use to explain the activity), you have the entire lecture/tutorial period for the trial. Make sure you know who your teammates are!
